# tamper

./: .gitignore  LICENSE  README.md  fastmcp.json  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: data-model.md  operations.md  rdf-primer.md
tamper/: assets.py  dataset.py  errors.py  ontology.py  tamper-core.ttl  tamper.ttl
tamper/app/: config.py
tamper/app/kg/: __init__.py  knowledge_graph.py  local.py
tamper/app/mcp/: server.py
tamper/core/: __init__.py  _common.py  assets.py  catalog.py  dataset.py  ontology.py  operation.py  operation_plan.py
tamper/core/ops/: image.py  operation.py  video.py
tamper/namespaces/: _TAMPER.py  __init__.py
tamper/ops/: __init__.py  add_blur.py  add_noise.py  audio.py  compress.py  crop.py  filtering.py  image.py  operation-shapes.ttl  operation.py  resample.py  resize.py  transcode.py  validation.py  video.py
tamper/ops/image/: __init__.py  compress.py  image_operation.py  noise.py
tamper/permutations/: __init__.py  permutations.py  plan-shacl.ttl  validation.py
tamper/plans/: __init__.py  async_plan_queue.py  operation_plan.py  plan-shacl.ttl  ray_executor.py  thread_executor.py  validation.py
tamper/tests/: test_assets.py
tamper/utils/: make_tarball.py
tamper/vocabularies/: _PLAN.py  _TAMPER.py  __init__.py  tamper-core.ttl  tamper-plan.ttl
tests/: test_assets.py  test_async_plan_queue.py  test_core_assets.py  test_kg_local.py  test_ops_add_noise.py  test_ops_audio.py  test_ops_crop.py  test_ops_image.py  test_ops_resample.py  test_ops_transcode.py  test_ops_validation.py  test_ops_video.py  test_plan_validation.py  test_thread_executor.py
