[project]
name = "tamper"
version = "0.1.0"
description = "A framework for expressing the relationships between multimedia files as an RDF knowledge graph."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp[tasks]>=3.3.1",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "owlrl>=7.1.4",
    "pillow>=12.2.0",
    "pyshacl>=0.31.0",
    "pytest>=9.0.3",
    "python-magic>=0.4.27",
    "ray>=2.55.1",
    "rdflib>=7.6.0",
]

[dependency-groups]
dev = []
